# FianchettoPy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: board_manager.py  main.py  pieces.py
src/fianchetto/: main.py
src/fianchetto/cli/: main_cli.py
src/fianchetto/core/: __init__.py  board_manager.py  pieces.py
tests/: test_bishop.py  test_castling.py  test_king.py  test_knight.py  test_pawn.py  test_promotion.py  test_queen.py  test_rook.py
