[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fianchetto"
version = "0.3.1"
description = "A chess game with a CLI"
authors = [{name = "Agostino Imbimbo Parra", email = "agoimbimboparra@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fianchetto", "fianchetto.core", "fianchetto.cli"]

[project.scripts]
fianchetto = "fianchetto.cli.main_cli:main"